<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas .android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_subtitle"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:text="@string/textLogin"
        android:textColor="@color/colorButton"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_login_rgm"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:textColor="@color/colorTextBlack"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tag"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/et_login_rgm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/et_login_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/editUser"
        android:inputType="number"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/editPassword"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/btn_lembrarRgm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_login_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/esqueceu_rgm"
        android:textColor="@color/colorButton" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_lembrarRgm"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/buttonEntrar"
        android:textColor="@android:color/white"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_arrow_right"
        android:layout_above="@id/swipeRight"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/deslize_registrar"
        android:textColor="@color/colorTextBlack"
        android:textSize="15sp" />

</RelativeLayout>